Added nav js to the emergency contact template

--- a/templates/ip4/emergency.html
+++ b/templates/ip4/emergency.html
@@ -32,5 +32,5 @@
         {% endif %}
     </section>
 </main>
-<script src="../js/nav.js"></script>
+<script src="{% static 'js/nav.js' %}"></script>
 {% endblock %}
