Added nav js to the profile template

--- a/templates/ip4/profile.html
+++ b/templates/ip4/profile.html
@@ -48,7 +48,7 @@
         </article>
     </section>
 </main>
-<script src="../js/nav.js"></script>
+<script src="{% static 'js/nav.js' %}"></script>
 <script>
     $(document).ready(function() {
         $("#id_neighborhood").attr('placeholder', '{{form.neighborhood.label}}');
